change platformio.ini layout, fix battery and leds for ball

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,561 +14,13 @@
 
 
 [platformio]
-; default_envs =  poebridge 
-default_envs = creatorclub ;// poebridge ;
+description = Unified firmware for ESP32 Devices
 
-[blip]
-; platform = espressif32 @ 6.9.0
-; platform_packages = framework-arduinoespressif32
-; board = esp32dev
-framework = arduino
-lib_deps = 
-	adafruit/Adafruit NeoPixel@^1.10.0
-	Wire
-	SPI
-	Preferences
-	WiFi
-	bblanchon/ArduinoJson @ ^6.18.5
-	SD
-	LittleFS
-	ESPmDNS
-	adafruit/Adafruit DotStar @ ^1.2.0
-	https://github.com/contrem/arduino-timer
-	wasm3/Wasm3 @ ^0.5.0
-	https://github.com/jshaw/SimplexNoise
-	https://github.com/rstephan/ArtnetWifi
-	ESP32Async/AsyncTCP
-  	ESP32Async/ESPAsyncWebServer
-	https://github.com/CNMAT/OSC
+extra_configs = 
+	configs/blip.ini
+	configs/creator.ini
+	configs/m5stick.ini
+	configs/olimex.ini
+	configs/xiaoc6.ini
 
-build_src_filter = +<main.cpp> +<UnityIncludes.cpp> +<RootComponent.cpp>
-upload_speed = 921600
-monitor_speed = 115200
-
-build_flags = 
-	-D ARDUINO_BLIP
-	-D BLIP_VERSION="\"0.9.0\""
-	-D USE_SERIAL
-	-D USE_SERVER
-	-D WS_MAX_QUEUED_MESSAGES=64
-	-D USE_ASYNC_WEBSOCKET	
-	-D CONFIG_ASYNC_TCP_RUNNING_CORE=1
-	-D CONFIG_ASYNC_TCP_USE_WDT=0
-	-D USE_WIFI
-	-D USE_OSC
-
-[env:generic]
-extends = blip
-lib_compat_mode = strict
-lib_ldf_mode = deep
-board_build.f_cpu = 240000000L
-board_build.f_flash = 40000000L
-board_build.flash_mode = dio
-board_build.mcu = esp32
-board_build.variant = esp32
-board_build.partitions = huge_app.csv
-build_flags = 
-	${blip.build_flags}
-	-D BLIP_GENERIC
-	-D USE_IO
-	-D IO_MAX_COUNT=16
-	-D IO_DEFAULT_PIN=35
-	-D IO_DEFAULT_MODE=IOComponent::PinMode::A_INPUT
-	-D USE_LEDSTRIP
-	-D USE_STREAMING
-	-D USE_ARTNET
-	-D USE_ESPNOW
-	-D LEDSTRIP_MAX_COUNT=1
-	-D LED_DEFAULT_EN_PIN=27
-	-D LED_DEFAULT_DATA_PIN=33
-	-D LED_DEFAULT_CLK_PIN=-1
-	-D LED_DEFAULT_COUNT=80
-	-D LED_MAX_COUNT=1000
-	-D LED_DEFAULT_TYPE=WS2812B
-	-D LED_DEFAULT_COLOR_ORDER=GRB
-	-D LED_DEFAULT_INVERT_DIRECTION=false
-	-D LED_DEFAULT_BRIGHTNESS=0.5f
-	-D LED_BRIGHTNESS_FACTOR=0.4f
-	-D LED_DEFAULT_MAX_POWER=1200
-	-D LED_LEDS_PER_PIXEL=1
-	-D USE_PWMLED
-	-D PWMLED_MAX_COUNT=4
-	-D TESTMODE_PRESSCOUNT=6
-
-[creator]
-extends = blip
-build_flags = 
-	${blip.build_flags}
-	-D USE_LEDSTRIP
-	-D USE_STREAMING
-	-D USE_ARTNET
-	; -D USE_ESPNOW
-	-D LEDSTRIP_MAX_COUNT=1
-
-	-D LED_DEFAULT_BRIGHTNESS=0.5f
-	; -D LED_DEFAULT_MAX_POWER=1200
-	-D PLAYBACK_USE_ALPHA
-	-D PLAYBACK_MAX_SCRIPTS=32
-	-D USE_FX
-	-D USE_BUTTON
-	-D BUTTON_MAX_COUNT=4
-	-D USE_IO
-	-D IO_MAX_COUNT=4
-	-D IO_DEFAULT_MODE=IOComponent::PinMode::A_OUTPUT
-	-D USE_BATTERY
-
-	-D BATTERY_DEFAUT_RAW_MIN=222
-	-D BATTERY_DEFAULT_RAW_MAX=335
-	-D BATTERY_DEFAULT_LOW_VOLTAGE=3.5f
-	-D USE_FILES
-	-D USE_SCRIPT
-	-D FILES_DEFAULT_SPEED=27000000
-	-D FILES_DEFAULT_EN=16
-	-D FILES_DEFAULT_POWER_VALUE=LOW
-
-	-D USE_MOTION
-	-D IMU_TYPE_BNO055
-	-D IMU_DEFAULT_ADDR=0x28
-
-	; -D USE_ESPNOW
-	; -D ESPNOW_ENABLED_PRESSCOUNT=5
-
-lib_deps = 
-	${blip.lib_deps}
-	https://github.com/adafruit/Adafruit_BNO055.git
-	adafruit/Adafruit Unified Sensor
-	adafruit/Adafruit BusIO
-
-[env:creatorclub]
-platform = espressif32
-board = esp32dev
-extends = creator
-build_flags = 
-	${creator.build_flags}
-	-D DEVICE_TYPE="\"CreatorClub\""
-	
-	-D USE_POWER
-	-D POWER_WAKEUP_BUTTON=32
-	-D POWER_KEEP_PIN=12
-	-D POWER_WAKEUP_BUTTON_STATE=true
-
-	-D USE_LEDSTRIP
-	-D USE_STREAMING
-
-	-D LED_USE_FASTLED
-	-D LED_BRIGHTNESS_FACTOR=0.4f
-	-D LED_DEFAULT_MAX_POWER=1200
-	-D LED_DEFAULT_COUNT=32
-	-D LED_DEFAULT_EN_PIN=27
-	-D LED_DEFAULT_DATA_PIN=25
-	-D LED_DEFAULT_CLK_PIN=26
-	-D LED_DEFAULT_TYPE=SK9822
-	-D LED_DEFAULT_COLOR_ORDER=BGR
-	-D LED_DEFAULT_INVERT_DIRECTION=true
-	-D LED_DEFAULT_COUNT=32
-	-D LED_MAX_COUNT=32
-	-D LED_LEDS_PER_PIXEL=3 ; 96 leds for 32 pixels, average 3 LEDs per pixel4
-	
-	-D IMU_DEFAULT_INT=33
-	-D IMU_DEFAULT_SDA=23
-	-D IMU_DEFAULT_SCL=22
-
-	-D FILES_DEFAULT_MISO=19
-	-D FILES_DEFAULT_MOSI=13
-	-D FILES_DEFAULT_SCK=14
-	-D FILES_DEFAULT_CS=15
-
-	-D BUTTON_DEFAULT_PIN=32
-	-D BUTTON_DEFAULT_MODE=D_INPUT
-
-	-D BATTERY_DEFAULT_PIN=35
-	-D BATTERY_DEFAULT_CHARGE_PIN=-1
-
-	-D IO_DEFAULT_PIN=17
-
-lib_deps = 
-	${creator.lib_deps}
-	FastLED
-
-[env:creatorball]
-extends = creator
-
-platform = https://github.com/mnowak32/platform-espressif32.git#boards/seeed_xiao_esp32c6
-platform_packages = 
-    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.2
-    framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.2/esp32-arduino-libs-3.0.2.zip
-framework = arduino
-board = seeed_xiao_esp32c6
-board_build.partitions = huge_app.csv
-
-build_flags = 
-	${creator.build_flags}
-	-D DEVICE_TYPE="\"CreatorBall\""
-
-	; -D POWER_EXT=1
-	-D POWER_KEEP_PIN=1
-	-D POWER_WAKEUP_BUTTON=7
-	-D BUTTON_DEFAULT_PIN=7
-	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLDOWN
-	-D BUTTON_DEFAULT_SHUTDOWN=true
-
-	-D BATTERY_DEFAULT_PIN=6
-	-D BATTERY_DEFAULT_CHARGE_PIN=14
-
-	; -D USE_16BIT_COLOR
-	-D USE_LEDSTRIP
-	-D USE_STREAMING
-	-D LED_USE_FASTLED
-	-D LED_BRIGHTNESS_FACTOR=1.0f
-	-D LED_DEFAULT_MAX_POWER=0
-	-D LED_DEFAULT_TYPE=WS2816
-	-D LED_DEFAULT_EN_PIN=20
-	-D LED_DEFAULT_DATA_PIN=3
-	-D LED_DEFAULT_DATA_BACKUP_PIN=2
-	-D LED_DEFAULT_CLK_PIN=-1
-	-D LED_COLOR_ORDER=GBR
-	-D LED_DEFAULT_COUNT=37
-	-D LED_MAX_COUNT=50
-	-D LED_LEDS_PER_PIXEL=1
-	-D LED_CHARGE_DISABLE_PIN=9;
-	-D LED_DEFAULT_CORRECTION=false
-
-	-D IO_DEFAULT_PIN=18
-	-D IO_DEFAULT_PIN2=19 ; to implement
-	
-	-D FILES_TYPE_WIN25N
-	-D FILES_DEFAULT_MISO=8
-	-D FILES_DEFAULT_MOSI=5
-	-D FILES_DEFAULT_SCK=4
-	-D FILES_DEFAULT_CS=15
-
-	-D IMU_DEFAULT_SDA=23
-	-D IMU_DEFAULT_SCL=22
-	-D IMU_DEFAULT_INT=-1
-	-D IMU_EXT_CRYSTAL=0x80
-
-	-D USE_BEHAVIOUR
-	-D BEHAVIOUR_MAX_COUNT=4
-
-lib_deps = 
-	${creator.lib_deps}
-	FastLED
-
-[env:creatortab]
-extends = creator
-build_flags = 
-	${creator.build_flags}
-	-D BLIP_CREATORTAB
-	-D USE_POWER
-	-D POWER_WAKEUP_BUTTON=36
-	-D POWER_WAKEUP_BUTTON_STATE=true
-	-D USE_LEDSTRIP
-	-D USE_STREAMING
-	-D LED_DEFAULT_CLK_PIN=-1
-	-D LED_DEFAULT_TYPE=WS2812B
-	-D LED_DEFAULT_COLOR_ORDER=GRB
-	-D LED_DEFAULT_INVERT_DIRECTION=false
-	-D LED_MAX_COUNT=1000
-	-D LED_BRIGHTNESS_FACTOR=0.2f
-
-
-[olimex]
-extends = blip
-platform = https://github.com/mnowak32/platform-espressif32.git
-platform_packages = 
-    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.2
-    framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.2/esp32-arduino-libs-3.0.2.zip
-board = esp32-poe
-build_flags = 
-	${blip.build_flags}
-	-D USE_ETHERNET
-	-D WIFI_DEFAULT_MODE=MODE_ETH
-	-D USE_POWER
-	-D POWER_KEEP_PIN=12
-	-D POWER_WAKEUP_BUTTON=34
-	-D POWER_WAKEUP_BUTTON_STATE=true
-	-D USE_IO
-	-D USE_BUTTON
-	-D BUTTON_MAX_COUNT=4
-	-D BUTTON_DEFAULT_PIN=34
-	-D USE_FILES
-	-D FILES_TYPE_LittleFS
-	
-lib_deps = 
-	${blip.lib_deps}
-	FS
-
-[env:olimexnode]
-extends = olimex
-platform = espressif32
-board = esp32-poe
-build_flags = 
-	${olimex.build_flags}
-	-D BLIP_OLIMEXNODE
-	-D USE_LEDSTRIP
-	-D USE_STREAMING
-	-D LEDSTRIP_MAX_COUNT=5
-	-D LED_DEFAULT_EN_PIN=-1
-	-D LED_DEFAULT_DATA_PIN=4
-	-D LED_DEFAULT_CLK_PIN=33
-	-D LED_DEFAULT_COUNT=32
-	-D LED_DEFAULT_TYPE=SK9822
-	-D LED_DEFAULT_COLOR_ORDER=BGR
-	-D LED_DEFAULT_INVERT_DIRECTION=false
-	-D LED_DEFAULT_BRIGHTNESS=0.5f
-	-D LED_BRIGHTNESS_FACTOR=0.4f
-	-D LED_MAX_COUNT=1000
-	-D PLAYBACK_USE_ALPHA
-	-D PLAYBACK_MAX_SCRIPTS=32
-	-D USE_FX
-	-D USE_SCRIPT
-
-[m5stickc]
-extends = blip
-board = m5stick-c
-platform = espressif32
-board_build.f_cpu = 240000000L
-upload_speed = 1500000
-build_flags = 
-	${blip.build_flags}
-	-D BLIP_M5STICKC
-	-D USE_DISPLAY
-	-D DISPLAY_TYPE=M5StickC
-	-D USE_SERIAL
-	-D USE_SERVER
-	-D WS_MAX_QUEUED_MESSAGES=64
-	-D CONFIG_ASYNC_TCP_RUNNING_CORE=1
-	-D CONFIG_ASYNC_TCP_USE_WDT=0
-	-D DISPLAY_SHOW_DBG
-	-D USE_WIFI
-	-D USE_ESPNOW
-	-D USE_OSC
-	-D USE_IO
-	-D USE_BUTTON
-	-D BUTTON_MAX_COUNT=2
-	-D BUTTON_DEFAULT_PIN=37
-	-D POWER_WAKEUP_BUTTON=39
-	-D POWER_WAKEUP_BUTTON_STATE=false
-	-D USE_FILES
-	-D FILES_TYPE_LittleFS
-	-D USE_MOTION
-	-D IMU_TYPE_M5MPU
-
-lib_deps = 
-	${blip.lib_deps}
-	m5stack/M5GFX@^0.1.15
-	m5stack/M5StickC
-
-
-[env:m5stick-generic]
-extends = m5stickc
-
-[env:m5servo]
-extends = m5stickc
-build_flags = 
-	-D BLIP_M5SERVO
-	-D USE_SERVO
-	-D SERVO_DEFAULT_PIN=26
-
-lib_deps = 
-	${m5stickc.lib_deps}
-	madhephaestus/ESP32Servo @ ^0.11.0
-
-[env:motor]
-extends = blip
-board = featheresp32
-build_flags = 
-	${blip.build_flags}
-	-D BLIP_M5SERVO
-	-D USE_SERIAL
-	-D USE_SERVER
-	-D WS_MAX_QUEUED_MESSAGES=64
-	-D CONFIG_ASYNC_TCP_RUNNING_CORE=1
-	-D CONFIG_ASYNC_TCP_USE_WDT=0
-	-D USE_WIFI
-	-D USE_OSC
-	-D USE_IO
-	-D BUTTON_MAX_COUNT=2
-	-D BUTTON_DEFAULT_PIN=37
-	-D USE_DC_MOTOR
-	-D DC_MOTOR_DEFAULT_EN_PIN=26
-	-D DC_MOTOR_DEFAULT_DIR1_PIN=36
-	-D DC_MOTOR_DEFAULT_DIR2_PIN=0
-
-lib_deps = 
-	${blip.lib_deps}
-	gin66/FastAccelStepper @ ^0.30.13
-
-[env:feathertuino]
-extends = blip
-board = featheresp32
-build_flags = 
-	${blip.build_flags}
-	-D USE_STEPPER
-	-D STEPPER_DEFAULT_DIR_PIN=25
-	-D STEPPER_DEFAULT_STEP_PIN=26
-	-D STEPPER_DEFAULT_EN_PIN=4
-	-D USE_IO
-
-[env:tinytuino]
-extends = blip
-board = tinypico
-build_flags = 
-	${blip.build_flags}
-	-D USE_IO
-
-[env:phonetuino]
-extends = blip
-board = featheresp32
-build_flags = 
-	${blip.build_flags}
-	-D USE_IO
-	-D IO_MAX_COUNT=8
-	-D USE_POWER
-	-D POWER_KEEP_PIN=12
-	-D POWER_WAKEUP_BUTTON=36
-	-D POWER_WAKEUP_BUTTON_STATE=true
-	-D USE_BUTTON
-	-D BUTTON_MAX_COUNT=4
-	-D BUTTON_DEFAULT_PIN=36
-
-[env:espnowm5bridge]
-extends = m5stickc
-build_flags = 
-	${m5stickc.build_flags}
-	-D BLIP_ESPNOWBRIDGE
-	-D ESPNOW_BRIDGE
-	-D USE_STREAMING
-	-D USE_ARTNET
-upload_port = COM5
-
-
-[env:espnowm5node]
-extends = m5stickc
-build_flags = 
-	${m5stickc.build_flags}
-	-D BLIP_ESPNOWNODE
-	-D USE_STREAMING
-	-D USE_ARTNET
-	-D USE_LEDSTRIP
-upload_port = COM24
-
-[xiaoc6]
-extends = blip
-platform = https://github.com/mnowak32/platform-espressif32.git#boards/seeed_xiao_esp32c6
-platform_packages = 
-    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.2
-    framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.2/esp32-arduino-libs-3.0.2.zip
-framework = arduino
-board = seeed_xiao_esp32c6
-board_build.partitions = huge_app.csv
-
-[env:xiaoc6generic]
-extends = xiaoc6
-build_flags = 
-	${xiaoc6.build_flags}
-	-D USE_SERIAL
-	-D USE_STREAMING
-	-D USE_ARTNET
-	-D USE_FILES
-	-D FILES_TYPE_LittleFS
-	-D USE_IO
-	-D IO_DEFAULT_MODE=IOComponent::PinMode::D_OUTPUT
-	-D WIFI_C6_USE_EXTERNAL_ANTENNA
-	-D USE_BUTTON
-	-D BUTTON_DEFAULT_PIN=2
-	-D USE_BATTERY
-	-D BATTERY_DEFAULT_PIN=0
-	-D BATTERY_VOLTAGE_CUSTOM_FUNC=getVoltage_c6
-	-D USE_POWER
-	-D POWER_EXT=1
-	-D POWER_WAKEUP_BUTTON=2
-	-D POWER_WAKEUP_BUTTON_STATE=true
-	-D USE_ESPNOW
-	-D ESPNOW_DEFAULT_ENABLED=false
-	-D ESPNOW_ENABLED_PRESSCOUNT=5
-	-D USE_LEDSTRIP
-	-D LED_USE_FASTLED
-	-D LEDSTRIP_MAX_COUNT=1
-	-D LED_DEFAULT_DATA_PIN=17
-	-D LED_DEFAULT_CLK_PIN=19
-	-D LED_DEFAULT_COUNT=200
-	-D LED_MAX_COUNT=1000
-	-D LED_DEFAULT_TYPE=SK9822
-	-D LED_DEFAULT_COLOR_ORDER=BGR
-	-D LED_DEFAULT_INVERT_DIRECTION=false
-	-D LED_DEFAULT_BRIGHTNESS=0.6f
-	-D LED_BRIGHTNESS_FACTOR=0.4f
-	-D LED_DEFAULT_MAX_POWER=2000
-	-D LED_LEDS_PER_PIXEL=1
-	
-lib_deps = 
-	${xiaoc6.lib_deps}
-	FastLED
-
-[env:xiaocube]
-extends =  xiaoc6
-build_flags = 
-	${xiaoc6.build_flags}
-	-D BLIP_XIAOCUBE
-	-D USE_SERIAL
-	-D USE_STREAMING
-	-D USE_ARTNET
-	-D USE_PWMLED
-	-D USE_16BIT_COLOR
-	-D PWMLED_MAX_COUNT=4
-	-D PWMLED_SHOW_INIT
-	-D PWMLED_SHOW_SHUTDOWN
-	-D PWMLED_SHOW_CONNECTION
-	-D PWMLED_DEFAULT_RPIN=17
-	-D PWMLED_DEFAULT_GPIN=19
-	-D PWMLED_DEFAULT_BPIN=20
-	-D PWMLED_DEFAULT_WPIN=18
-	-D PWMLED_USE_STREAMING
-	-D PWMLED_DEFAULT_16BIT_STREAM=true 
-	-D PWMLED_DEFAULT_RESOLUTION=14 
-	-D PWMLED_DEFAULT_FREQUENCY=1 
-	-D USE_FILES
-	-D FILES_TYPE_LittleFS
-	-D USE_IO
-	-D IO_DEFAULT_PIN=15
-	-D IO_DEFAULT_MODE=IOComponent::PinMode::D_OUTPUT
-	-D WIFI_C6_USE_EXTERNAL_ANTENNA
-	-D USE_BUTTON
-	-D BUTTON_DEFAULT_PIN=2
-	-D USE_BATTERY
-	-D BATTERY_DEFAULT_PIN=0
-	-D BATTERY_VOLTAGE_CUSTOM_FUNC=getVoltage_c6
-	-D USE_POWER
-	-D POWER_EXT=1
-	-D POWER_WAKEUP_BUTTON=2
-	-D POWER_WAKEUP_BUTTON_STATE=true
-	-D USE_ESPNOW
-	-D ESPNOW_ENABLED_PRESSCOUNT=5
-
-
-[env:xiaobridge]
-extends = xiaoc6 
-build_flags = 
-	${xiaoc6.build_flags}
-	-D BLIP_XIAOCUBE
-	-D USE_SERIAL
-	-D USE_FILES
-	-D FILES_TYPE_LittleFS
-	-D USE_IO
-	-D WIFI_C6_USE_EXTERNAL_ANTENNA
-	-D USE_ESPNOW
-	-D USE_ARTNET
-	-D ESPNOW_BRIDGE
-
-[env:poebridge]
-extends = olimex 
-build_flags = 
-	${olimex.build_flags}
-	-D BLIP_XIAOCUBE
-	-D USE_ESPNOW
-	-D ESPNOW_BRIDGE
-	-D ESPNOW_PAIRING_PRESSCOUNT=2
-	-D USE_STREAMING
-	-D USE_ARTNET
-
+default_envs = creatornodestrip
