ball updates and ESPAsyncWebserver versionning

--- a/configs/blip.ini
+++ b/configs/blip.ini
@@ -17,7 +17,7 @@ lib_deps =
 	https://github.com/jshaw/SimplexNoise
 	https://github.com/rstephan/ArtnetWifi
 	ESP32Async/AsyncTCP
-  	ESP32Async/ESPAsyncWebServer
+  	ESP32Async/ESPAsyncWebServer @ ^3.7.9
 	https://github.com/CNMAT/OSC
 
 build_src_filter = +<main.cpp> +<UnityIncludes.cpp> +<RootComponent.cpp>
