--- a/configs/creator.ini
+++ b/configs/creator.ini
@@ -102,6 +102,7 @@ framework = arduino
 board = seeed_xiao_esp32c6
 board_build.partitions = huge_app.csv
 
+
 build_flags = 
 	${creator.build_flags}
 
@@ -113,17 +114,20 @@ build_flags =
 	-D BUTTON_DEFAULT_SHUTDOWN=true
 
 	-D BATTERY_DEFAULT_PIN=6
-	-D BATTERY_DEFAULT_CHARGE_PIN=14
+	-D BATTERY_DEFAULT_CHARGE_PIN=0
+	-D BATTERY_CHARGE_PIN_MODE=INPUT_PULLUP
     -D BATTERY_READ_MILLIVOLTS
     -D BATTERY_READ_MILLIVOLTS_MULTIPLIER=2
+	-D BATTERY_CHARGE_LED_PIN=9
+	-D BATTERY_CHARGE_LED_ENABLE_VALUE=LOW
 
 	; -D USE_16BIT_COLOR
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
 	-D LED_USE_FASTLED
-	-D LED_BRIGHTNESS_FACTOR=1.0f
 	-D LED_DEFAULT_MAX_POWER=0
 
+	
 	-D LED_MAX_COUNT=50
 	-D LED_DEFAULT_TYPE=WS2816
 	-D LED_DEFAULT_EN_PIN=20
@@ -139,11 +143,12 @@ build_flags =
 	-D IO_DEFAULT_PIN=18
 	-D IO_DEFAULT_PIN2=19 ; to implement
 	
-	-D FILES_TYPE_WIN25N
-	-D FILES_DEFAULT_MISO=8
-	-D FILES_DEFAULT_MOSI=5
-	-D FILES_DEFAULT_SCK=4
-	-D FILES_DEFAULT_CS=15
+	-D USE_FILES
+	-D FILES_TYPE_SD
+	-D FILES_DEFAULT_MISO=10
+	-D FILES_DEFAULT_MOSI=9
+	-D FILES_DEFAULT_SCK=22
+	-D FILES_DEFAULT_CS=20
 
 	-D IMU_DEFAULT_SDA=23
 	-D IMU_DEFAULT_SCL=22
@@ -164,6 +169,7 @@ build_flags =
 	-D DEVICE_TYPE="\"Creator Ball\""
     -D LEDSTRIP_MAX_COUNT=1
     -D LEDSTRIP_DEFAULT_COUNT=1
+	-D LED_BRIGHTNESS_FACTOR=1.0f
 
 [env:creatornode]
 extends = creatornodebase
@@ -178,6 +184,7 @@ build_flags =
     
     -D LEDSTRIP_MAX_COUNT=2
     -D LEDSTRIP_DEFAULT_COUNT=2
+	-D LED_BRIGHTNESS_FACTOR=1.0f
 
     -D LED2_DEFAULT_DATA_PIN=16
     -D LED2_DEFAULT_TYPE=WS2812B
@@ -186,8 +193,6 @@ build_flags =
 
 [env:creatornodestrip]
 extends = creatornodebase
-
-build_unflags=
 
 build_flags =
     ${creatornodebase.build_flags}
@@ -202,9 +207,6 @@ build_flags =
     -D LED_DEFAULT_TYPE=WS2812B
     -D LED_DEFAULT_COLOR_ORDER=GRB
     -D LED_DEFAULT_COUNT=100
-
-    -D BATTERY_DEFAUT_RAW_MIN=1600
-    -D BATTERY_DEFAULT_RAW_MAX=2100
 
 [env:creatortab]
 extends = creator
