fix battery feedback, files WIP

--- a/configs/creator.ini
+++ b/configs/creator.ini
@@ -102,7 +102,9 @@ framework = arduino
 board = seeed_xiao_esp32c6
 board_build.partitions = huge_app.csv
 
-
+build_unflags = 
+	-D USE_FILES
+	
 build_flags = 
 	${creator.build_flags}
 
@@ -143,8 +145,7 @@ build_flags =
 	-D IO_DEFAULT_PIN=18
 	-D IO_DEFAULT_PIN2=19 ; to implement
 	
-	-D USE_FILES
-	-D FILES_TYPE_SD
+	-D FILES_TYPE_FLASH
 	-D FILES_DEFAULT_MISO=10
 	-D FILES_DEFAULT_MOSI=9
 	-D FILES_DEFAULT_SCK=22
@@ -161,6 +162,7 @@ build_flags =
 lib_deps = 
 	${creator.lib_deps}
 	FastLED
+	adafruit/Adafruit SPIFlash@^5.1.1
 
 [env:creatorball]
 extends = creatornodebase
