fixed platform for creatorclub

--- a/configs/blip.ini
+++ b/configs/blip.ini
@@ -1,6 +1,39 @@
 
 [blip]
 framework = arduino
+platform = espressif32 @ 6.5.0
+lib_compat_mode = strict
+lib_ldf_mode = chain
+
+board_build.f_cpu = 240000000L
+board_build.f_flash = 40000000L
+board_build.flash_mode = dio
+board_build.mcu = esp32
+board_build.variant = esp32
+board_build.partitions = huge_app.csv
+upload_speed = 921600
+monitor_speed = 115200
+
+build_flags =
+	-std=c++17
+	-std=gnu++17
+    -Os
+    -Wl,--gc-sections
+
+	-D ARDUINO_BLIP
+	-D BLIP_VERSION="\"0.9.0\""
+	-D USE_SERIAL
+	-D USE_SERVER
+	-D WS_MAX_QUEUED_MESSAGES=64
+	-D USE_ASYNC_WEBSOCKET	
+	-D CONFIG_ASYNC_TCP_RUNNING_CORE=1
+	-D CONFIG_ASYNC_TCP_USE_WDT=0
+	-D USE_WIFI
+	-D USE_OSC
+
+build_unflags =
+  -std=gnu++11
+
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.10.0
 	Wire
@@ -16,36 +49,15 @@ lib_deps =
 	wasm3/Wasm3 @ ^0.5.0
 	https://github.com/jshaw/SimplexNoise
 	https://github.com/rstephan/ArtnetWifi
-	ESP32Async/AsyncTCP
-  	ESP32Async/ESPAsyncWebServer @ ^3.7.9
+	ESP32Async/ESPAsyncWebServer@ ^3.7.9
+  	ESP32Async/AsyncTCP
 	https://github.com/CNMAT/OSC
 
 build_src_filter = +<main.cpp> +<UnityIncludes.cpp> +<RootComponent.cpp>
-upload_speed = 921600
-monitor_speed = 115200
 
-build_flags = 
-	-D ARDUINO_BLIP
-	-D BLIP_VERSION="\"0.9.0\""
-	-D USE_SERIAL
-	-D USE_SERVER
-	-D WS_MAX_QUEUED_MESSAGES=64
-	-D USE_ASYNC_WEBSOCKET	
-	-D CONFIG_ASYNC_TCP_RUNNING_CORE=1
-	-D CONFIG_ASYNC_TCP_USE_WDT=0
-	-D USE_WIFI
-	-D USE_OSC
 
 [env:generic]
 extends = blip
-lib_compat_mode = strict
-lib_ldf_mode = deep
-board_build.f_cpu = 240000000L
-board_build.f_flash = 40000000L
-board_build.flash_mode = dio
-board_build.mcu = esp32
-board_build.variant = esp32
-board_build.partitions = huge_app.csv
 build_flags = 
 	${blip.build_flags}
 	-D BLIP_GENERIC
