--- a/configs/creator.ini
+++ b/configs/creator.ini
@@ -1,4 +1,3 @@
-
 [creator]
 extends = blip
 build_flags = 
@@ -41,7 +40,6 @@ lib_deps =
 	adafruit/Adafruit BusIO
 
 [env:creatorclub]
-platform = espressif32
 board = esp32dev
 extends = creator
 build_flags = 
@@ -57,6 +55,7 @@ build_flags =
 	-D USE_STREAMING
 
 	-D LED_USE_FASTLED
+
 	-D LED_BRIGHTNESS_FACTOR=0.4f
 	-D LED_DEFAULT_MAX_POWER=1200
 	-D LED_DEFAULT_COUNT=32
@@ -89,7 +88,7 @@ build_flags =
 
 lib_deps = 
 	${creator.lib_deps}
-	FastLED
+	fastled/FastLED@^3.10.1
 
 [creatornodebase]
 extends = creator
