auto merge, parallel build and auto upload

--- a/configs/creator.ini
+++ b/configs/creator.ini
@@ -6,8 +6,6 @@ build_flags =
 	-D USE_STREAMING
 	-D USE_ARTNET
 
-
-	-D LEDSTRIP_MAX_COUNT=2
 	-D LED_DEFAULT_BRIGHTNESS=0.5f
 
 	-D PLAYBACK_USE_ALPHA
@@ -44,7 +42,7 @@ board = esp32dev
 extends = creator
 build_flags = 
 	${creator.build_flags}
-	-D DEVICE_TYPE="\"CreatorClub\""
+	-D DEVICE_TYPE="\"Creator Club\""
 	
 	-D USE_POWER
 	-D POWER_WAKEUP_BUTTON=32
@@ -87,6 +85,9 @@ build_flags =
 
 	-D IO_DEFAULT_PIN=17
 
+	-D VIDS="0x10c4,0x0c"
+	-D PIDS="0xea60,0xd0"
+
 lib_deps = 
 	${creator.lib_deps}
 	fastled/FastLED@^3.10.1
@@ -101,6 +102,7 @@ platform_packages =
 framework = arduino
 board = seeed_xiao_esp32c6
 board_build.partitions = huge_app.csv
+board_build.mcu = esp32c6
 
 build_unflags = 
 	-D USE_FILES
@@ -118,7 +120,7 @@ build_flags =
 	-D BATTERY_DEFAULT_PIN=6
 	-D BATTERY_DEFAULT_CHARGE_PIN=0
 	-D BATTERY_CHARGE_PIN_MODE=INPUT_PULLUP
-	-D BATTERY_CHARGE_PIN_INVERTED=true
+	; -D BATTERY_CHARGE_PIN_INVERTED=true
     -D BATTERY_READ_MILLIVOLTS
     -D BATTERY_READ_MILLIVOLTS_MULTIPLIER=2
 	-D BATTERY_CHARGE_LED_PIN=9
@@ -131,13 +133,10 @@ build_flags =
 	-D LED_DEFAULT_MAX_POWER=0
 
 	
-	-D LED_MAX_COUNT=50
-	-D LED_DEFAULT_TYPE=WS2816
+
 	-D LED_DEFAULT_EN_PIN=20
-	-D LED_DEFAULT_DATA_PIN=3
 	-D LED_DEFAULT_DATA_BACKUP_PIN=2
     -D LED_DEFAULT_COLOR_ORDER=GRB
-	-D LED_DEFAULT_COUNT=37
 	-D LED_LEDS_PER_PIXEL=1
 	-D LED_DEFAULT_CORRECTION=false
 
@@ -146,7 +145,7 @@ build_flags =
 	-D IO_DEFAULT_PIN=18
 	-D IO_DEFAULT_PIN2=19 ; to implement
 	
-	-D FILES_TYPE_FLASH
+	-D FILES_TYPE_SD
 	-D FILES_DEFAULT_MISO=10
 	-D FILES_DEFAULT_MOSI=9
 	-D FILES_DEFAULT_SCK=22
@@ -162,8 +161,8 @@ build_flags =
 
 lib_deps = 
 	${creator.lib_deps}
-	FastLED
-	adafruit/Adafruit SPIFlash@^5.1.1
+	fastled/FastLED@3.10.1
+
 
 [env:creatorball]
 extends = creatornodebase
@@ -173,6 +172,10 @@ build_flags =
     -D LEDSTRIP_MAX_COUNT=1
     -D LEDSTRIP_DEFAULT_COUNT=1
 	-D LED_BRIGHTNESS_FACTOR=1.0f
+	-D LED_MAX_COUNT=50
+	-D LED_DEFAULT_COUNT=37
+	-D LED_DEFAULT_TYPE=WS2816
+	-D LED_DEFAULT_DATA_PIN=3
 
 [env:creatornode]
 extends = creatornodebase
@@ -183,10 +186,12 @@ build_unflags=
 build_flags =
     ${creatornodebase.build_flags}
 	-D DEVICE_TYPE="\"Creator Node\""
+	-D VIDS="0x303A"
+	-D PIDS="0x1001"
+
     -D LED_MAX_COUNT=1000
     
     -D LEDSTRIP_MAX_COUNT=2
-    -D LEDSTRIP_DEFAULT_COUNT=2
 	-D LED_BRIGHTNESS_FACTOR=1.0f
 
     -D LED2_DEFAULT_DATA_PIN=16
@@ -194,16 +199,15 @@ build_flags =
     -D LED2_DEFAULT_COLOR_ORDER=GRB
     -D LED2_DEFAULT_COUNT=20
 
+
 [env:creatornodestrip]
 extends = creatornodebase
 
 build_flags =
     ${creatornodebase.build_flags}
-	-D DEVICE_TYPE="\"Creator Node\""
-    -D LED_MAX_COUNT=800
+    -D DEVICE_TYPE="\"Creator Node Strip\""
+	-D LED_MAX_COUNT=800
     
-    -D LEDSTRIP_MAX_COUNT=1
-    -D LEDSTRIP_DEFAULT_COUNT=1
 	-D LED_BRIGHTNESS_FACTOR=0.4f
 
     -D LED_DEFAULT_DATA_PIN=16
