--- a/configs/olimex.ini
+++ b/configs/olimex.ini
@@ -30,6 +30,7 @@ lib_deps =
 extends = olimex 
 build_flags = 
 	${olimex.build_flags}
+	-D DEVICE_TYPE="\"Olimex POE Bridge\""
 	-D BLIP_XIAOCUBE
 	-D USE_ESPNOW
 	-D ESPNOW_BRIDGE
