--- a/configs/xiaoc6.ini
+++ b/configs/xiaoc6.ini
@@ -1,5 +1,4 @@
 
-
 [xiaoc6]
 extends = blip
 platform = https://github.com/mnowak32/platform-espressif32.git#boards/seeed_xiao_esp32c6
@@ -8,12 +7,14 @@ platform_packages =
     framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.2/esp32-arduino-libs-3.0.2.zip
 framework = arduino
 board = seeed_xiao_esp32c6
+board_build.mcu = esp32c6
 board_build.partitions = huge_app.csv
 
 [env:xiaoc6generic]
 extends = xiaoc6
 build_flags = 
 	${xiaoc6.build_flags}
+	-D DEVICE_TYPE="\"XIAO C6 Generic\""
 	-D USE_SERIAL
 	-D USE_STREAMING
 	-D USE_ARTNET
