--- a/configs/blip.ini
+++ b/configs/blip.ini
@@ -14,6 +14,8 @@ board_build.partitions = huge_app.csv
 upload_speed = 921600
 monitor_speed = 115200
 
+extra_scripts = post:merge_bin.py
+
 build_flags =
 	-std=c++17
 	-std=gnu++17
