--- a/configs/blip.ini
+++ b/configs/blip.ini
@@ -60,6 +60,7 @@ build_src_filter = +<main.cpp> +<UnityIncludes.cpp> +<RootComponent.cpp>
 
 [env:generic]
 extends = blip
+board = esp32dev
 build_flags = 
 	${blip.build_flags}
 	-D BLIP_GENERIC
@@ -72,7 +73,8 @@ build_flags =
 	-D USE_ARTNET
 	
     -D USE_ESPNOW
-    -D ESPNOW_ENABLED_PRESSCOUNT=5
+	-D ESPNOW_DEFAULT_ENABLED=false
+	-D ESPNOW_ENABLED_PRESSCOUNT=5
 	
     -D LEDSTRIP_MAX_COUNT=2
 	-D LED_DEFAULT_EN_PIN=27
@@ -81,7 +83,6 @@ build_flags =
 	-D LED_DEFAULT_COUNT=80
 	-D LED_MAX_COUNT=1000
 	-D LED_DEFAULT_TYPE=WS2812B
-	-D LED_DEFAULT_COLOR_ORDER=GRB
 	-D LED_DEFAULT_INVERT_DIRECTION=false
 	-D LED_DEFAULT_BRIGHTNESS=0.5f
 	-D LED_BRIGHTNESS_FACTOR=0.4f
