--- a/configs/creator.ini
+++ b/configs/creator.ini
@@ -31,6 +31,10 @@ build_flags =
 	-D IMU_TYPE_BNO055
 	-D IMU_DEFAULT_ADDR=0x28
 
+	-D USE_ESPNOW
+	-D ESPNOW_DEFAULT_ENABLED=false
+	-D ESPNOW_ENABLED_PRESSCOUNT=5
+
 lib_deps = 
 	${blip.lib_deps}
 	https://github.com/adafruit/Adafruit_BNO055.git
