--- a/configs/olimex.ini
+++ b/configs/olimex.ini
@@ -1,11 +1,7 @@
 
 [olimex]
 extends = blip
-platform = https://github.com/mnowak32/platform-espressif32.git
-platform_packages = 
-    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.2
-    framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.2/esp32-arduino-libs-3.0.2.zip
-board = esp32-poe
+board = esp32dev
 build_flags = 
 	${blip.build_flags}
 	-D USE_ETHERNET
@@ -20,6 +16,9 @@ build_flags =
 	-D BUTTON_DEFAULT_PIN=34
 	-D USE_FILES
 	-D FILES_TYPE_LittleFS
+
+	-D VIDS="\"0x1a86\""
+	-D PIDS="\"0x7523\""
 	
 lib_deps = 
 	${blip.lib_deps}
@@ -28,11 +27,15 @@ lib_deps =
 
 [env:poebridge]
 extends = olimex 
+board = esp32-poe
+
+
 build_flags = 
 	${olimex.build_flags}
 	-D DEVICE_TYPE="\"Olimex POE Bridge\""
-	-D BLIP_XIAOCUBE
-	-D USE_ESPNOW
+
+	-D USE_ESPNOW 
+	-D ESPNOW_DEFAULT_ENABLED=true
 	-D ESPNOW_BRIDGE
 	-D ESPNOW_PAIRING_PRESSCOUNT=2
 	-D USE_STREAMING
