--- a/configs/creator.ini
+++ b/configs/creator.ini
@@ -107,7 +107,7 @@ framework = arduino
 board = seeed_xiao_esp32c6
 board_build.partitions = huge_app.csv
 board_build.mcu = esp32c6
-
+board_build.f_cpu = 160000000L 
 build_unflags = 
 	-D USE_FILES
 	
@@ -133,14 +133,12 @@ build_flags =
 	; -D USE_16BIT_COLOR
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
-	-D LED_USE_FASTLED
 	-D LED_DEFAULT_MAX_POWER=0
 
 	
 
 	-D LED_DEFAULT_EN_PIN=20
 	-D LED_DEFAULT_DATA_BACKUP_PIN=2
-    -D LED_DEFAULT_COLOR_ORDER=GRB
 	-D LED_LEDS_PER_PIXEL=1
 	-D LED_DEFAULT_CORRECTION=false
 
@@ -163,9 +161,7 @@ build_flags =
 	-D USE_BEHAVIOUR
 	-D BEHAVIOUR_MAX_COUNT=4
 
-lib_deps = 
-	${creator.lib_deps}
-	fastled/FastLED@3.10.1
+
 
 
 [env:creatorball]
@@ -173,6 +169,10 @@ extends = creatornodebase
 build_flags =
     ${creatornodebase.build_flags}
 	-D DEVICE_TYPE="\"Creator Ball\""
+
+	-D LED_USE_FASTLED
+    -D LED_DEFAULT_COLOR_ORDER=GRB
+
     -D LEDSTRIP_MAX_COUNT=1
     -D LEDSTRIP_DEFAULT_COUNT=1
 	-D LED_BRIGHTNESS_FACTOR=1.0f
@@ -180,6 +180,10 @@ build_flags =
 	-D LED_DEFAULT_COUNT=37
 	-D LED_DEFAULT_TYPE=WS2816
 	-D LED_DEFAULT_DATA_PIN=3
+
+lib_deps = 
+	${creatornodebase.lib_deps}
+	fastled/FastLED@^3.10.1
 
 [env:creatornode]
 extends = creatornodebase
@@ -212,12 +216,16 @@ build_flags =
     -D DEVICE_TYPE="\"Creator Node Strip\""
 	-D LED_MAX_COUNT=800
     
+	-D LED_USE_FASTLED
 	-D LED_BRIGHTNESS_FACTOR=0.4f
 
     -D LED_DEFAULT_DATA_PIN=16
     -D LED_DEFAULT_TYPE=WS2812B
-    -D LED_DEFAULT_COLOR_ORDER=GRB
     -D LED_DEFAULT_COUNT=100
+
+lib_deps = 
+	${creatornodebase.lib_deps}
+	fastled/FastLED@^3.10.1
 
 [env:creatortab]
 extends = creator
