--- a/configs/creator.ini
+++ b/configs/creator.ini
@@ -24,7 +24,6 @@ build_flags =
 	-D USE_FILES
 	-D USE_SCRIPT
 	-D FILES_DEFAULT_SPEED=27000000
-	-D FILES_DEFAULT_EN=16
 	-D FILES_DEFAULT_POWER_VALUE=LOW
 
 	-D USE_MOTION
@@ -75,6 +74,7 @@ build_flags =
 	-D IMU_DEFAULT_SDA=23
 	-D IMU_DEFAULT_SCL=22
 
+	-D FILES_DEFAULT_EN=16
 	-D FILES_DEFAULT_MISO=19
 	-D FILES_DEFAULT_MOSI=13
 	-D FILES_DEFAULT_SCK=14
@@ -99,12 +99,9 @@ lib_deps =
 [creatornodebase]
 extends = creator
 
-platform = https://github.com/mnowak32/platform-espressif32.git#boards/seeed_xiao_esp32c6
-platform_packages = 
-    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.2
-    framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.2/esp32-arduino-libs-3.0.2.zip
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
 framework = arduino
-board = seeed_xiao_esp32c6
+board = esp32-c6-devkitm-1
 board_build.partitions = huge_app.csv
 board_build.mcu = esp32c6
 board_build.f_cpu = 160000000L 
@@ -134,8 +131,6 @@ build_flags =
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
 	-D LED_DEFAULT_MAX_POWER=0
-
-	
 
 	-D LED_DEFAULT_EN_PIN=20
 	-D LED_DEFAULT_DATA_BACKUP_PIN=2
@@ -216,9 +211,11 @@ build_flags =
     -D DEVICE_TYPE="\"Creator Node Strip\""
 	-D LED_MAX_COUNT=800
     
-	-D LED_USE_FASTLED
+	-DARDUINO_USB_MODE=1
+	-DARDUINO_USB_CDC_ON_BOOT=1
+	
+	-D LED_EN_NO_OPEN_DRAIN
 	-D LED_BRIGHTNESS_FACTOR=0.4f
-
     -D LED_DEFAULT_DATA_PIN=16
     -D LED_DEFAULT_TYPE=WS2812B
     -D LED_DEFAULT_COUNT=100
