--- a/configs/blip.ini
+++ b/configs/blip.ini
@@ -1,7 +1,7 @@
 
 [blip]
 framework = arduino
-platform = espressif32 @ 6.5.0
+platform = espressif32
 lib_compat_mode = strict
 lib_ldf_mode = chain
 
