--- a/configs/xiaoc6.ini
+++ b/configs/xiaoc6.ini
@@ -1,10 +1,7 @@
 
 [xiaoc6]
 extends = blip
-platform = https://github.com/mnowak32/platform-espressif32.git#boards/seeed_xiao_esp32c6
-platform_packages = 
-    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.2
-    framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.2/esp32-arduino-libs-3.0.2.zip
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
 framework = arduino
 board = seeed_xiao_esp32c6
 board_build.mcu = esp32c6
@@ -15,6 +12,10 @@ extends = xiaoc6
 build_flags = 
 	${xiaoc6.build_flags}
 	-D DEVICE_TYPE="\"XIAO C6 Generic\""
+	
+	-DARDUINO_USB_MODE=1
+	-DARDUINO_USB_CDC_ON_BOOT=1
+
 	-D USE_SERIAL
 	-D USE_STREAMING
 	-D USE_ARTNET
