--- a/configs/creator.ini
+++ b/configs/creator.ini
@@ -105,12 +105,13 @@ board = esp32-c6-devkitm-1
 board_build.partitions = huge_app.csv
 board_build.mcu = esp32c6
 board_build.f_cpu = 160000000L 
-build_unflags = 
-	-D USE_FILES
 	
 build_flags = 
 	${creator.build_flags}
 
+	-D ARDUINO_USB_MODE=1
+	-D ARDUINO_USB_CDC_ON_BOOT=1
+	
 	; -D POWER_EXT=1
 	-D POWER_KEEP_PIN=1
 	-D POWER_WAKEUP_BUTTON=7
@@ -142,11 +143,14 @@ build_flags =
 	-D IO_DEFAULT_PIN=18
 	-D IO_DEFAULT_PIN2=19 ; to implement
 	
-	-D FILES_TYPE_SD
-	-D FILES_DEFAULT_MISO=10
-	-D FILES_DEFAULT_MOSI=9
-	-D FILES_DEFAULT_SCK=22
-	-D FILES_DEFAULT_CS=20
+
+
+	-D FILES_TYPE_FLASH
+	
+	-D FILES_DEFAULT_MOSI=4
+	-D FILES_DEFAULT_MISO=5
+	-D FILES_DEFAULT_CS=15
+	-D FILES_DEFAULT_SCK=8
 
 	-D IMU_DEFAULT_SDA=23
 	-D IMU_DEFAULT_SCL=22
@@ -156,14 +160,15 @@ build_flags =
 	-D USE_BEHAVIOUR
 	-D BEHAVIOUR_MAX_COUNT=4
 
-
-
+lib_deps = 
+	${creator.lib_deps}
 
 [env:creatorball]
 extends = creatornodebase
 build_flags =
     ${creatornodebase.build_flags}
 	-D DEVICE_TYPE="\"Creator Ball\""
+
 
 	-D LED_USE_FASTLED
     -D LED_DEFAULT_COLOR_ORDER=GRB
