fix ethernet static IP, long range WIP

--- a/configs/blip.ini
+++ b/configs/blip.ini
@@ -1,7 +1,8 @@
 
 [blip]
 framework = arduino
-platform = espressif32
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
+
 lib_compat_mode = strict
 lib_ldf_mode = chain
 
@@ -9,7 +10,6 @@ board_build.f_cpu = 240000000L
 board_build.f_flash = 40000000L
 board_build.flash_mode = dio
 board_build.mcu = esp32
-board_build.variant = esp32
 board_build.partitions = huge_app.csv
 upload_speed = 921600
 monitor_speed = 115200
@@ -67,26 +67,11 @@ board = esp32dev
 build_flags = 
 	${blip.build_flags}
 	-D BLIP_GENERIC
-	-D USE_IO
-	-D IO_MAX_COUNT=16
-	-D IO_DEFAULT_PIN=35
-	-D IO_DEFAULT_MODE=IOComponent::PinMode::A_INPUT
-	-D USE_LEDSTRIP
+
 	-D USE_STREAMING
 	-D USE_ARTNET
 	
-    -D LEDSTRIP_MAX_COUNT=2
-	-D LED_DEFAULT_EN_PIN=27
-	-D LED_DEFAULT_DATA_PIN=33
-	-D LED_DEFAULT_CLK_PIN=-1
-	-D LED_DEFAULT_COUNT=80
-	-D LED_MAX_COUNT=1000
-	-D LED_DEFAULT_TYPE=WS2812B
-	-D LED_DEFAULT_INVERT_DIRECTION=false
-	-D LED_DEFAULT_BRIGHTNESS=0.5f
-	-D LED_BRIGHTNESS_FACTOR=0.4f
-	-D LED_DEFAULT_MAX_POWER=1200
-	-D LED_LEDS_PER_PIXEL=1
+	
 	-D USE_PWMLED
 	-D PWMLED_MAX_COUNT=4
 	-D TESTMODE_PRESSCOUNT=6
