--- a/configs/creator.ini
+++ b/configs/creator.ini
@@ -3,6 +3,19 @@ extends = blip
 build_flags = 
 	${blip.build_flags}
 	-D USE_LEDSTRIP
+    -D LEDSTRIP_MAX_COUNT=2
+	-D LED_DEFAULT_EN_PIN=27
+	-D LED_DEFAULT_DATA_PIN=33
+	-D LED_DEFAULT_CLK_PIN=-1
+	-D LED_DEFAULT_COUNT=80
+	-D LED_MAX_COUNT=1000
+	-D LED_DEFAULT_TYPE=WS2812B
+	-D LED_DEFAULT_INVERT_DIRECTION=false
+	-D LED_DEFAULT_BRIGHTNESS=0.5f
+	-D LED_BRIGHTNESS_FACTOR=0.4f
+	-D LED_DEFAULT_MAX_POWER=1200
+	-D LED_LEDS_PER_PIXEL=1
+
 	-D USE_STREAMING
 	-D USE_ARTNET
 
@@ -99,8 +112,6 @@ lib_deps =
 [creatornodebase]
 extends = creator
 
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
-framework = arduino
 board = esp32-c6-devkitm-1
 board_build.partitions = huge_app.csv
 board_build.mcu = esp32c6
