--- a/configs/olimex.ini
+++ b/configs/olimex.ini
@@ -1,19 +1,15 @@
 
 [olimex]
 extends = blip
-board = esp32dev
+board = esp32-poe-iso
 build_flags = 
 	${blip.build_flags}
 	-D USE_ETHERNET
 	-D WIFI_DEFAULT_MODE=MODE_ETH
-	-D USE_POWER
-	-D POWER_KEEP_PIN=12
-	-D POWER_WAKEUP_BUTTON=34
-	-D POWER_WAKEUP_BUTTON_STATE=true
 	-D USE_IO
 	-D USE_BUTTON
-	-D BUTTON_MAX_COUNT=4
-	-D BUTTON_DEFAULT_PIN=34
+	-D BUTTON_MAX_COUNT=1
+	-D BUTTON_DEFAULT_PIN=3
 	-D USE_FILES
 	-D FILES_TYPE_LittleFS
 
@@ -27,8 +23,6 @@ lib_deps =
 
 [env:poebridge]
 extends = olimex 
-board = esp32-poe
-
 
 build_flags = 
 	${olimex.build_flags}
@@ -43,8 +37,6 @@ build_flags =
 
 [env:olimexnode]
 extends = olimex
-platform = espressif32
-board = esp32-poe
 build_flags = 
 	${olimex.build_flags}
 	-D BLIP_OLIMEXNODE
