fix serial on clubs and bridge, fix number parsing, fix bridge routeAll

--- a/configs/olimex.ini
+++ b/configs/olimex.ini
@@ -6,8 +6,8 @@ build_flags =
 	${blip.build_flags}
 	-D USE_ETHERNET
 	-D WIFI_DEFAULT_MODE=MODE_ETH
-	-D USE_IO
-	-D USE_BUTTON
+	; -D USE_IO
+	; -D USE_BUTTON
 	-D BUTTON_MAX_COUNT=1
 	-D BUTTON_DEFAULT_PIN=3
 	-D USE_FILES
@@ -32,8 +32,7 @@ build_flags =
 	-D ESPNOW_BRIDGE
 	-D ESPNOW_PAIRING_PRESSCOUNT=2
 	-D USE_STREAMING
-	-D USE_ARTNET
-    
+	-D USE_ARTNET    
 
 [env:olimexnode]
 extends = olimex
