--- a/configs/creator.ini
+++ b/configs/creator.ini
@@ -3,23 +3,9 @@ extends = blip
 build_flags = 
 	${blip.build_flags}
 	-D USE_LEDSTRIP
-    -D LEDSTRIP_MAX_COUNT=2
-	-D LED_DEFAULT_EN_PIN=27
-	-D LED_DEFAULT_DATA_PIN=33
-	-D LED_DEFAULT_CLK_PIN=-1
-	-D LED_DEFAULT_COUNT=80
-	-D LED_MAX_COUNT=1000
-	-D LED_DEFAULT_TYPE=WS2812B
-	-D LED_DEFAULT_INVERT_DIRECTION=false
-	-D LED_DEFAULT_BRIGHTNESS=0.5f
-	-D LED_BRIGHTNESS_FACTOR=0.4f
-	-D LED_DEFAULT_MAX_POWER=1200
-	-D LED_LEDS_PER_PIXEL=1
 
 	-D USE_STREAMING
 	-D USE_ARTNET
-
-	-D LED_DEFAULT_BRIGHTNESS=0.5f
 
 	-D PLAYBACK_USE_ALPHA
 	-D PLAYBACK_MAX_SCRIPTS=32
@@ -87,6 +73,7 @@ build_flags =
 	-D IMU_DEFAULT_SDA=23
 	-D IMU_DEFAULT_SCL=22
 
+	-D FILES_TYPE_SD
 	-D FILES_DEFAULT_EN=16
 	-D FILES_DEFAULT_MISO=19
 	-D FILES_DEFAULT_MOSI=13
@@ -97,7 +84,6 @@ build_flags =
 	-D BUTTON_DEFAULT_MODE=D_INPUT
 
 	-D BATTERY_DEFAULT_PIN=35
-	-D BATTERY_DEFAULT_CHARGE_PIN=3
 	-D BATTERY_CHARGE_PIN_MODE=INPUT_PULLUP
 
 	-D IO_DEFAULT_PIN=17
@@ -145,7 +131,6 @@ build_flags =
 	-D LED_DEFAULT_MAX_POWER=0
 
 	-D LED_DEFAULT_EN_PIN=20
-	-D LED_DEFAULT_DATA_BACKUP_PIN=2
 	-D LED_LEDS_PER_PIXEL=1
 	-D LED_DEFAULT_CORRECTION=false
 
@@ -189,6 +174,7 @@ build_flags =
 	-D LED_DEFAULT_COUNT=37
 	-D LED_DEFAULT_TYPE=WS2816
 	-D LED_DEFAULT_DATA_PIN=3
+	-D LED_DEFAULT_DATA_BACKUP_PIN=2
 
 lib_deps = 
 	${creatornodebase.lib_deps}
@@ -211,7 +197,6 @@ build_flags =
     -D LEDSTRIP_MAX_COUNT=2
 	-D LED_BRIGHTNESS_FACTOR=1.0f
 
-    -D LED2_DEFAULT_DATA_PIN=16
     -D LED2_DEFAULT_TYPE=WS2812B
     -D LED2_DEFAULT_COLOR_ORDER=GRB
     -D LED2_DEFAULT_COUNT=20
@@ -247,6 +232,8 @@ build_flags =
 	-D POWER_WAKEUP_BUTTON_STATE=true
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
+	-D LED_DEFAULT_EN_PIN=27
+	-D LED_DEFAULT_DATA_PIN=25
 	-D LED_DEFAULT_CLK_PIN=-1
 	-D LED_DEFAULT_TYPE=WS2812B
 	-D LED_DEFAULT_COLOR_ORDER=GRB
