--- a/configs/m5stick.ini
+++ b/configs/m5stick.ini
@@ -2,11 +2,14 @@
 [m5stickc]
 extends = blip
 board = m5stick-c
+board_build.variant = m5stack_stickc
 board_build.f_cpu = 240000000L
 upload_speed = 1500000
 build_flags = 
 	${blip.build_flags}
 	-D BLIP_M5STICKC
+	-D USE_M5UNIFIED
+
 	-D USE_DISPLAY
 	-D DISPLAY_TYPE=M5StickC
 	-D USE_SERIAL
@@ -28,10 +31,10 @@ build_flags =
 	-D USE_MOTION
 	-D IMU_TYPE_M5MPU
 
+
 lib_deps = 
 	${blip.lib_deps}
-	m5stack/M5GFX@^0.1.15
-	m5stack/M5StickC
+	m5stack/M5Unified
 
 
 [env:m5stick-generic]
@@ -69,3 +72,36 @@ build_flags =
 	-D USE_ARTNET
 	-D USE_LEDSTRIP
 upload_port = COM24
+
+
+[env:m5distance]
+extends = m5stickc
+build_flags = 
+	${m5stickc.build_flags}
+	-D BLIP_M5DISTANCE
+	-D USE_DISTANCE
+	-D DISTANCE_MAX_COUNT=1
+	-D DISTANCE_DEFAULT_TRIGGER_PIN=25
+	-D DISTANCE_DEFAULT_ECHO_PIN=26
+
+	-D USE_LEDSTRIP
+	-D LED_USE_FASTLED
+	-D LEDSTRIP_MAX_COUNT=1
+
+	-D LED_DEFAULT_TYPE=WS2812B
+	-D LED_BRIGHTNESS_FACTOR=0.4f
+	-D LED_DEFAULT_MAX_POWER=1200
+	-D LED_DEFAULT_DATA_PIN=32
+	-D LED_DEFAULT_COLOR_ORDER=GRB
+	-D LED_DEFAULT_COUNT=50
+	-D LED_MAX_COUNT=300
+	-D LED_LEDS_PER_PIXEL=1
+
+	-D USE_STREAMING
+	-D USE_ARTNET
+	-D USE_SCRIPT
+	-D SCRIPT_MAX_SIZE=2048
+
+lib_deps =
+	${m5stickc.lib_deps}
+	fastled/FastLED@^3.10.1
