--- a/configs/m5stick.ini
+++ b/configs/m5stick.ini
@@ -88,19 +88,21 @@ build_flags =
 	-D LED_USE_FASTLED
 	-D LEDSTRIP_MAX_COUNT=1
 
+	-D PLAYBACK_USE_ALPHA
+
 	-D LED_DEFAULT_TYPE=WS2812B
 	-D LED_BRIGHTNESS_FACTOR=0.4f
 	-D LED_DEFAULT_MAX_POWER=1200
 	-D LED_DEFAULT_DATA_PIN=32
 	-D LED_DEFAULT_COLOR_ORDER=GRB
-	-D LED_DEFAULT_COUNT=50
+	-D LED_DEFAULT_COUNT=24
 	-D LED_MAX_COUNT=300
 	-D LED_LEDS_PER_PIXEL=1
 
 	-D USE_STREAMING
 	-D USE_ARTNET
 	-D USE_SCRIPT
-	-D SCRIPT_MAX_SIZE=2048
+	-D SCRIPT_MAX_SIZE=4096
 
 lib_deps =
 	${m5stickc.lib_deps}
