Add support for VL53L0X as Distance Sensor

--- a/configs/m5stick.ini
+++ b/configs/m5stick.ini
@@ -81,8 +81,11 @@ build_flags =
 	-D BLIP_M5DISTANCE
 	-D USE_DISTANCE
 	-D DISTANCE_MAX_COUNT=1
-	-D DISTANCE_DEFAULT_TRIGGER_PIN=25
-	-D DISTANCE_DEFAULT_ECHO_PIN=26
+	-D DISTANCE_SENSOR_VL53L0X
+
+	; -D DISTANCE_DEFAULT_TRIGGER_PIN=25
+	; -D DISTANCE_DEFAULT_ECHO_PIN=26
+	
 
 	-D USE_LEDSTRIP
 	-D LED_USE_FASTLED
@@ -93,7 +96,7 @@ build_flags =
 	-D LED_DEFAULT_TYPE=WS2812B
 	-D LED_BRIGHTNESS_FACTOR=0.4f
 	-D LED_DEFAULT_MAX_POWER=1200
-	-D LED_DEFAULT_DATA_PIN=32
+	-D LED_DEFAULT_DATA_PIN=25
 	-D LED_DEFAULT_COLOR_ORDER=GRB
 	-D LED_DEFAULT_COUNT=24
 	-D LED_MAX_COUNT=300
@@ -107,3 +110,4 @@ build_flags =
 lib_deps =
 	${m5stickc.lib_deps}
 	fastled/FastLED@^3.10.1
+	https://github.com/schnoog/vl53l0x-arduino-mod.git
