--- a/configs/blip.ini
+++ b/configs/blip.ini
@@ -54,8 +54,8 @@ lib_deps =
 	wasm3/Wasm3 @ ^0.5.0
 	https://github.com/jshaw/SimplexNoise
 	https://github.com/rstephan/ArtnetWifi
-	ESP32Async/ESPAsyncWebServer@ ^3.7.9
-  	ESP32Async/AsyncTCP
+	; ESP32Async/ESPAsyncWebServer@ ^3.7.9
+  	; ESP32Async/AsyncTCP
 	https://github.com/CNMAT/OSC
 
 build_src_filter = +<main.cpp> +<UnityIncludes.cpp> +<RootComponent.cpp>
