--- a/configs/creator.ini
+++ b/configs/creator.ini
@@ -1,4 +1,4 @@
-[creator]
+[creators]
 extends = blip
 build_flags = 
 	${blip.build_flags}
@@ -39,12 +39,13 @@ lib_deps =
 	adafruit/Adafruit Unified Sensor
 	adafruit/Adafruit BusIO
 
-[env:creatorclub]
+[env:creatorsclub]
 board = esp32dev
-extends = creator
+extends = creators
 build_flags = 
-	${creator.build_flags}
-	-D DEVICE_TYPE="\"Creator Club\""
+	${creators.build_flags}
+	-D BLIP_CREATORSCLUB
+	-D DEVICE_TYPE="\"Creators Club\""
 	
 	-D USE_POWER
 	-D POWER_WAKEUP_BUTTON=32
@@ -59,14 +60,13 @@ build_flags =
 	-D LED_BRIGHTNESS_FACTOR=0.4f
 	-D LED_DEFAULT_MAX_POWER=1200
 	-D LED_DEFAULT_COUNT=32
+	-D LED_MAX_COUNT=32
 	-D LED_DEFAULT_EN_PIN=27
 	-D LED_DEFAULT_DATA_PIN=25
 	-D LED_DEFAULT_CLK_PIN=26
 	-D LED_DEFAULT_TYPE=SK9822
 	-D LED_DEFAULT_COLOR_ORDER=BGR
 	-D LED_DEFAULT_INVERT_DIRECTION=true
-	-D LED_DEFAULT_COUNT=32
-	-D LED_MAX_COUNT=32
 	-D LED_LEDS_PER_PIXEL=3 ; 96 leds for 32 pixels, average 3 LEDs per pixel4
 	
 	-D IMU_DEFAULT_INT=33
@@ -92,11 +92,70 @@ build_flags =
 	-D PIDS="0xea60,0xd0"
 
 lib_deps = 
-	${creator.lib_deps}
+	${creators.lib_deps}
 	fastled/FastLED@^3.10.1
 
-[creatornodebase]
-extends = creator
+	
+[env:creatorstab]
+board = esp32dev
+extends = creators
+
+build_unflags=
+	-D USE_ASYNC_WEBSOCKET ;needs sync websocket to avoid IRAM overflow
+
+build_flags = 
+	${creators.build_flags}
+	-D BLIP_CREATORSTAB
+	-D DEVICE_TYPE="\"Creators Tab\""
+	
+	-D USE_POWER
+	-D POWER_WAKEUP_BUTTON=36
+	-D POWER_KEEP_PIN=12
+	-D POWER_WAKEUP_BUTTON_STATE=true
+
+	-D USE_LEDSTRIP
+	-D USE_STREAMING
+
+	-D LED_BRIGHTNESS_FACTOR=0.4f
+	-D LED_DEFAULT_MAX_POWER=1200
+	-D LED_DEFAULT_COUNT=32
+	-D LED_MAX_COUNT=1000
+	-D LED_DEFAULT_EN_PIN=27
+	-D LED_DEFAULT_DATA_PIN=25
+	-D LED_DEFAULT_CLK_PIN=-1
+	-D LED_DEFAULT_TYPE=WS2812B
+	-D LED_DEFAULT_COLOR_ORDER=NEO_BGR
+	-D LED_LEDS_PER_PIXEL=1
+
+	-D IMU_DEFAULT_INT=34
+	-D IMU_DEFAULT_SDA=23
+	-D IMU_DEFAULT_SCL=22
+
+	-D FILES_TYPE_SD
+	-D FILES_DEFAULT_EN=33
+	-D FILES_DEFAULT_MISO=19
+	-D FILES_DEFAULT_MOSI=13
+	-D FILES_DEFAULT_SCK=14
+	-D FILES_DEFAULT_CS=15
+
+	-D BUTTON_DEFAULT_PIN=36
+	-D BUTTON_DEFAULT_MODE=D_INPUT
+
+	-D BATTERY_DEFAULT_PIN=35
+	-D BATTERY_DEFAULT_CHARGE_PIN=39
+	-D BATTERY_CHARGE_PIN_MODE=INPUT_PULLUP
+
+	-D IO_DEFAULT_PIN=32
+
+	-D VIDS="0x10c4,0x0c"
+	-D PIDS="0xea60,0xd0"
+
+lib_deps = 
+	${creators.lib_deps}
+	links2004/WebSockets@^2.7.1
+
+[creatorsnodebase]
+extends = creators
 
 board = esp32-c6-devkitm-1
 board_build.partitions = huge_app.csv
@@ -104,7 +163,7 @@ board_build.mcu = esp32c6
 board_build.f_cpu = 160000000L 
 	
 build_flags = 
-	${creator.build_flags}
+	${creators.build_flags}
 
 	-D ARDUINO_USB_MODE=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
@@ -155,14 +214,14 @@ build_flags =
 	-D BEHAVIOUR_MAX_COUNT=4
 
 lib_deps = 
-	${creator.lib_deps}
+	${creators.lib_deps}
 
-[env:creatorball]
-extends = creatornodebase
+[env:creatorsball]
+extends = creatorsnodebase
 build_flags =
-    ${creatornodebase.build_flags}
-	-D DEVICE_TYPE="\"Creator Ball\""
-
+    ${creatorsnodebase.build_flags}
+	-D BLIP_CREATORSBALL
+	-D DEVICE_TYPE="\"Creators Ball\""
 
 	-D LED_USE_FASTLED
     -D LED_DEFAULT_COLOR_ORDER=GRB
@@ -177,18 +236,19 @@ build_flags =
 	-D LED_DEFAULT_DATA_BACKUP_PIN=2
 
 lib_deps = 
-	${creatornodebase.lib_deps}
+	${creatorsnodebase.lib_deps}
 	fastled/FastLED@^3.10.1
 
-[env:creatornode]
-extends = creatornodebase
+[env:creatorSnode]
+extends = creatorsnodebase
 
 build_unflags=
     -D LED_MAX_COUNT
 
 build_flags =
-    ${creatornodebase.build_flags}
-	-D DEVICE_TYPE="\"Creator Node\""
+    ${creatorsnodebase.build_flags}
+	-D BLIP_CREATORSNODE
+	-D DEVICE_TYPE="\"Creators Node\""
 	-D VIDS="0x303A"
 	-D PIDS="0x1001"
 
@@ -202,12 +262,13 @@ build_flags =
     -D LED2_DEFAULT_COUNT=20
 
 
-[env:creatornodestrip]
-extends = creatornodebase
+[env:creatorsnodestrip]
+extends = creatorsnodebase
 
 build_flags =
-    ${creatornodebase.build_flags}
-    -D DEVICE_TYPE="\"Creator Node Strip\""
+    ${creatorsnodebase.build_flags}
+	-D BLIP_CREATORSNODESTRIP
+    -D DEVICE_TYPE="\"Creators Node Strip\""
 	-D LED_MAX_COUNT=800
     
 	-DARDUINO_USB_MODE=1
@@ -220,22 +281,4 @@ build_flags =
     -D LED_DEFAULT_COUNT=100
 
 lib_deps = 
-	${creatornodebase.lib_deps}
-
-[env:creatortab]
-extends = creator
-build_flags = 
-	${creator.build_flags}
-	-D BLIP_CREATORTAB
-	-D USE_POWER
-	-D POWER_WAKEUP_BUTTON=36
-	-D POWER_WAKEUP_BUTTON_STATE=true
-	-D USE_LEDSTRIP
-	-D USE_STREAMING
-	-D LED_DEFAULT_EN_PIN=27
-	-D LED_DEFAULT_CLK_PIN=-1
-	-D LED_DEFAULT_TYPE=WS2812B
-	-D LED_DEFAULT_COLOR_ORDER=GRB
-	-D LED_DEFAULT_INVERT_DIRECTION=false
-	-D LED_MAX_COUNT=1000
-	-D LED_BRIGHTNESS_FACTOR=0.2f
+	${creatorsnodebase.lib_deps}
