LTO optimization, Removed permanently Sync Webserver

--- a/configs/blip.ini
+++ b/configs/blip.ini
@@ -16,18 +16,31 @@ monitor_speed = 115200
 
 extra_scripts = post:merge_bin.py
 
+build_unflags =
+  -std=gnu++11
+	-fno-lto            ; in case any platform/toolchain sets this
+
 build_flags =
 	-std=c++17
 	-std=gnu++17
+
+	; optimizations for iram and size
     -Os
     -Wl,--gc-sections
+	-Os
+	-Wl,--gc-sections
+	-flto
 
+	-ffunction-sections
+	-fdata-sections
+	-Wl,-Map,firmware.map        ; emits a useful map to see where IRAM goes
+	; -D CORE_DEBUG_LEVEL=0        ; strip debug
+	
 	-D ARDUINO_BLIP
 	-D BLIP_VERSION="\"1.0.3\""
 	-D USE_SERIAL
 	-D USE_SERVER
 	-D WS_MAX_QUEUED_MESSAGES=64
-	-D USE_ASYNC_WEBSOCKET	
 	-D CONFIG_ASYNC_TCP_RUNNING_CORE=1
 	-D CONFIG_ASYNC_TCP_USE_WDT=0
 	-D USE_WIFI
@@ -36,8 +49,6 @@ build_flags =
 	-D USE_ESPNOW
 	-D ESPNOW_ENABLED_PRESSCOUNT=5
 
-build_unflags =
-  -std=gnu++11
 
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.10.0
@@ -54,8 +65,8 @@ lib_deps =
 	wasm3/Wasm3 @ ^0.5.0
 	https://github.com/jshaw/SimplexNoise
 	https://github.com/rstephan/ArtnetWifi
-	; ESP32Async/ESPAsyncWebServer@ ^3.7.9
-  	; ESP32Async/AsyncTCP
+	ESP32Async/ESPAsyncWebServer@ ^3.7.9
+  	ESP32Async/AsyncTCP
 	https://github.com/CNMAT/OSC
 
 build_src_filter = +<main.cpp> +<UnityIncludes.cpp> +<RootComponent.cpp>
