--- a/configs/creator.ini
+++ b/configs/creator.ini
@@ -12,12 +12,9 @@ build_flags =
 	-D USE_FX
 	-D USE_BUTTON
 	-D BUTTON_MAX_COUNT=4
-	-D USE_IO
-	-D IO_MAX_COUNT=4
-	-D IO_DEFAULT_MODE=IOComponent::PinMode::A_OUTPUT
 	-D USE_BATTERY
 
-	-D BATTERY_DEFAUT_RAW_MIN=222
+	-D BATTERY_DEFAULT_RAW_MIN=222
 	-D BATTERY_DEFAULT_RAW_MAX=335
 	-D BATTERY_DEFAULT_LOW_VOLTAGE=3.5f
 	-D USE_FILES
@@ -84,9 +81,11 @@ build_flags =
 	-D BUTTON_DEFAULT_MODE=D_INPUT
 
 	-D BATTERY_DEFAULT_PIN=35
-	-D BATTERY_CHARGE_PIN_MODE=INPUT_PULLUP
+	-D BATTERY_DEFAULT_CHARGE_PIN=3
+	-D BATTERY_CHARGE_PIN_MODE=INPUT
 
-	-D IO_DEFAULT_PIN=17
+	-D USE_IR
+	-D IR_DEFAULT_PIN=17
 
 	-D VIDS="0x10c4,0x0c"
 	-D PIDS="0xea60,0xd0"
@@ -142,7 +141,9 @@ build_flags =
 	-D BATTERY_DEFAULT_CHARGE_PIN=39
 	-D BATTERY_CHARGE_PIN_MODE=INPUT_PULLUP
 
-	-D IO_DEFAULT_PIN=32
+	-D USE_IO
+	-D IO_MAX_COUNT=4
+	-D IO_DEFAULT_MODE=IOComponent::PinMode::A_OUTPUT
 
 	-D VIDS="0x10c4,0x0c"
 	-D PIDS="0xea60,0xd0"
@@ -174,7 +175,7 @@ build_flags =
 	-D BATTERY_DEFAULT_PIN=6
 	-D BATTERY_DEFAULT_CHARGE_PIN=0
 	-D BATTERY_CHARGE_PIN_MODE=INPUT_PULLUP
-	; -D BATTERY_CHARGE_PIN_INVERTED=true
+	
     -D BATTERY_READ_MILLIVOLTS
     -D BATTERY_READ_MILLIVOLTS_MULTIPLIER=2
 	-D BATTERY_CHARGE_LED_PIN=9
@@ -191,8 +192,9 @@ build_flags =
 
 	-D LED_CHARGE_DISABLE_PIN=9
 
-	-D IO_DEFAULT_PIN=18
-	-D IO_DEFAULT_PIN2=19 ; to implement
+	-D USE_IR
+	-D IR_DEFAULT_PIN=18
+	-D IR_DEFAULT_PIN2=19
 
 	-D FILES_TYPE_FLASH
 	
