Change ESP streaming, support bigger packets/multi universe streaming

--- a/configs/creator.ini
+++ b/configs/creator.ini
@@ -222,6 +222,7 @@ build_flags =
 	-D DEVICE_TYPE="\"Creators Ball\""
 
 	-D LED_USE_FASTLED
+
     -D LED_DEFAULT_COLOR_ORDER=GRB
 
     -D LEDSTRIP_MAX_COUNT=1
@@ -235,9 +236,9 @@ build_flags =
 
 lib_deps = 
 	${creatorsnodebase.lib_deps}
-	fastled/FastLED@^3.10.1
+	fastled/FastLED@^3.10.3
 
-[env:creatorSnode]
+[env:creatorsnode]
 extends = creatorsnodebase
 
 build_unflags=
