--- a/configs/xiaoc6.ini
+++ b/configs/xiaoc6.ini
@@ -93,7 +93,7 @@ build_flags =
 extends = xiaoc6 
 build_flags = 
 	${xiaoc6.build_flags}
-	-D BLIP_XIAOCUBE
+	-D BLIP_XIAOBRIDGE
 	-D USE_SERIAL
 	-D USE_FILES
 	-D FILES_TYPE_LittleFS
@@ -101,3 +101,44 @@ build_flags =
 	-D WIFI_C6_USE_EXTERNAL_ANTENNA
 	-D USE_ARTNET
 	-D ESPNOW_BRIDGE
+
+
+[env:xiaoc6garden]
+extends = xiaoc6
+build_flags =
+	${xiaoc6.build_flags}
+	-D DEVICE_TYPE="\"XIAO C6 Garden\""
+	-D BLIP_XIAOGARDEN
+
+	-D USE_SERIAL
+	-D USE_STREAMING
+	-D USE_ARTNET
+	-D USE_FILES
+	-D FILES_TYPE_LittleFS
+	
+	-D USE_LEDSTRIP
+	; -D LED_USE_FASTLED
+	-D LEDSTRIP_MAX_COUNT=1
+	-D LED_DEFAULT_DATA_PIN=19
+	-D LED_DEFAULT_TYPE=WS2815
+	-D LED_DEFAULT_COUNT=300
+	-D LED_MAX_COUNT=1000
+	-D LED_DEFAULT_COLOR_ORDER=NEO_RGB
+	-D LED_EN_NO_OPEN_DRAIN
+	-D LED_DEFAULT_BRIGHTNESS=1.0f
+	
+	-D USE_BUTTON
+	-D BUTTON_DEFAULT_PIN=2
+
+	-D USE_DISTANCE
+	-D DISTANCE_MAX_COUNT=1
+	-D DISTANCE_SENSOR_VL53L0X
+
+	-D USE_SCRIPT
+	
+
+lib_deps = 
+	${xiaoc6.lib_deps}
+	; fastled/FastLED@^3.10.3
+	https://github.com/schnoog/vl53l0x-arduino-mod.git
+
