wasm updates, live parameter setting and feedback

--- a/configs/xiaoc6.ini
+++ b/configs/xiaoc6.ini
@@ -115,7 +115,9 @@ build_flags =
 	-D USE_ARTNET
 	-D USE_FILES
 	-D FILES_TYPE_LittleFS
-	
+
+	-D WIFI_C6_USE_EXTERNAL_ANTENNA
+
 	-D USE_LEDSTRIP
 	; -D LED_USE_FASTLED
 	-D LEDSTRIP_MAX_COUNT=1
@@ -129,6 +131,8 @@ build_flags =
 	
 	-D USE_BUTTON
 	-D BUTTON_DEFAULT_PIN=2
+	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLUP
+	-D BUTTON_DEFAULT_INVERTED=true
 
 	-D USE_DISTANCE
 	-D DISTANCE_MAX_COUNT=1
