change partitions, OTA support, change upload to goldengeek

--- a/configs/xiaoc6.ini
+++ b/configs/xiaoc6.ini
@@ -4,7 +4,6 @@ extends = blip
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
 board = seeed_xiao_esp32c6
 board_build.mcu = esp32c6
-board_build.partitions = huge_app.csv
 
 [env:xiaoc6generic]
 extends = xiaoc6
@@ -110,6 +109,8 @@ build_flags =
 	-D DEVICE_TYPE="\"XIAO C6 Garden\""
 	-D BLIP_XIAOGARDEN
 
+	-D USE_OTA
+
 	-D USE_SERIAL
 	-D USE_STREAMING
 	-D USE_ARTNET
@@ -145,4 +146,5 @@ lib_deps =
 	${xiaoc6.lib_deps}
 	; fastled/FastLED@^3.10.3
 	https://github.com/schnoog/vl53l0x-arduino-mod.git
+	ArduinoOTA
 
