--- a/configs/blip.ini
+++ b/configs/blip.ini
@@ -10,7 +10,7 @@ board_build.f_cpu = 240000000L
 board_build.f_flash = 40000000L
 board_build.flash_mode = dio
 board_build.mcu = esp32
-board_build.partitions = huge_app.csv
+board_build.partitions = min_spiffs.csv
 upload_speed = 921600
 monitor_speed = 115200
 
@@ -22,7 +22,7 @@ build_unflags =
 
 build_flags =	
 	-D ARDUINO_BLIP
-	-D BLIP_VERSION="\"1.0.8\""
+	-D BLIP_VERSION="\"1.0.9\""
 
 	-std=c++17
 	-std=gnu++17
