add firmware category

--- a/configs/creator.ini
+++ b/configs/creator.ini
@@ -3,6 +3,7 @@ extends = blip
 build_flags = 
 	${blip.build_flags}
 	-D USE_LEDSTRIP
+	-D DEVICE_CATEGORY="\"Creators\""
 
 	-D USE_STREAMING
 	-D USE_ARTNET
@@ -43,7 +44,7 @@ build_flags =
 	${creators.build_flags}
 	-D BLIP_CREATORSCLUB
 	-D DEVICE_TYPE="\"Creators Club\""
-	
+
 	-D USE_POWER
 	-D POWER_WAKEUP_BUTTON=32
 	-D POWER_KEEP_PIN=12
