--- a/configs/xiaoc6.ini
+++ b/configs/xiaoc6.ini
@@ -107,9 +107,9 @@ extends = xiaoc6
 build_flags =
 	${xiaoc6.build_flags}
 	-D DEVICE_TYPE="\"XIAO C6 Garden\""
-	-D BLIP_XIAOGARDEN
+	-D DEVICE_CATEGORY="\"Ben Kuper\""
 
-	-D USE_OTA
+	-D BLIP_XIAOGARDEN
 
 	-D USE_SERIAL
 	-D USE_STREAMING
