--- a/configs/blip.ini
+++ b/configs/blip.ini
@@ -22,7 +22,7 @@ build_unflags =
 
 build_flags =	
 	-D ARDUINO_BLIP
-	-D BLIP_VERSION="\"1.0.9\""
+	-D BLIP_VERSION="\"1.1.0\""
 
 	-std=c++17
 	-std=gnu++17
@@ -47,6 +47,7 @@ build_flags =
 	-D USE_ESPNOW
 	-D ESPNOW_ENABLED_PRESSCOUNT=5
 
+	-D USE_OTA
 
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.10.0
